re PR debug/48207 (ICE in lhd_set_decl_assembler_name, at langhooks.c:158)

2011-04-19  Richard Guenther  <rguenther@suse.de>

	PR lto/48207
	* tree.c (free_lang_data): Do not reset the decl-assembler-name
	langhook.

	* g++.dg/lto/pr48207_0.C: New testcase.

From-SVN: r172708